# AutoButton

./: .gitignore  DEV_POSTMORTEM.md  GEMINI.md  README.md  README_en.md
.agent/rules/: general.md
client/: .gitignore  README.md  README_en.md  convert_icon.py  package-lock.json  package.json  vite.config.ts
client/electron/: main.ts  preload.js  preload.ts
client/src/: App.tsx  index.css
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: capture.rs  input.rs  lib.rs  ocr.rs  window.rs
client/src/locales/: en.json  zh.json
client/src/services/: ipc.ts
server/: package-lock.json  package.json
server/src/: app.ts
server/src/routes/: auth.ts
