[package]
name = "autobutton"
version = "0.1.0"
description = "AutoButton - 智能按键自动化工具"
authors = ["AutoButton Team"]
license = "MIT"
repository = "https://github.com/rlkun/AutoButton"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
png = "0.17"
windows = { version = "0.61.3", features = [
    "Media_Ocr",
    "Graphics_Imaging",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Storage",
    "Storage_Streams"
] }

[profile.release]
# 极致二进制体积优化
panic = "abort"
codegen-units = 1
lto = true
strip = true
opt-level = "s"
